[package]
name = "cmsutil"
version = "0.1.0"
authors = ["Dmitry Pankratov <dmitry@everyoneprint.com>"]
edition = "2021"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"

[dependencies]
wincms = { git = "ssh://gitea@dev1.everyoneprint.com:3022/EveryonePrint/wincms.git", branch = "dev" }
clap = "3.0.0-rc.0"
memmap = "0.7"
log = "0.4"
env_logger = "0.9"
